--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
 :root {
     --hero-height: 60vh;
     --hero-max-height: 700px;
+
+    --tea-green: #cdeac0ff;
+    --rose-pompadour: #e27396ff;
+    --amaranth-pink: #ea9ab2ff;
+    --mimi-pink: #efcfe3ff;
+    --dark-slate-gray: #254441ff;
   }
 
 @font-face {
@@ -9,36 +15,66 @@
   src: url("./Fonts/LilitaOne-Regular.ttf");
 }
 
+.TopBar {
+  height: 6rem;
+  background-color: var(--mimi-pink);
+}
+.NavBar {
+  height: 4rem;
+  background-color: rgb(72, 106, 84);
+}
+
+
+.page {
+  width: 100%;
+  height: 100%;
+  background-color:  var(--dark-slate-gray);
+}
 .Hero {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     
-    width: min(100% - 5rem, var(--container-max, 120ch));
+    width: min(100% - 0rem, var(--container-max, 100ch));
     margin: auto;
-    margin-top: 2rem;
     
-    background-color: wheat;
+    background-color: var(--tea-green);
     height: var(--hero-height);
     max-height: var(--hero-max-height);
 }
 
 .Hero img {
         object-fit: cover;
-        height: min(var(--hero-height), var(--hero-max-height));
-        width: min(var(--hero-height), var(--hero-max-height));
+        width: min(60% - 5rem, var(--container-max, 40ch));
+        aspect-ratio: 1/1;
         border-radius: 100%;
+        margin-left: 1rem;
 }
 
 .box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 
   text-align: left;
-  flex-grow: 0.8;
+  height: 80%;
 
   margin: 3rem;
+}
+.box a {
+  background-color: white;
+  align-self: flex-end;
+  padding: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .box h1 {
   font-family: "LilitaOne", sans-serif;
   font-size: 3rem;
+  color: var(--rose-pompadour);
+}
+
+.box p {
+  font-family: Arial, Helvetica, sans-serif;
 }
