--- a/style.css
+++ b/style.css
@@ -18,37 +18,79 @@
 .TopBar {
   height: 6rem;
   background-color: var(--mimi-pink);
-}
-.NavBar {
-  height: 4rem;
-  background-color: rgb(72, 106, 84);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
 }
 
+.TopBar img {
+  height: 5rem;
+  align-self: center;
+}
+
+.NavBar {
+  height: 4rem;
+  background-color: var(--dark-slate-gray);
+}
+
+.NavBar ul {
+  margin: 0;
+  height: 100%;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+}
+.NavBar ul li {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+}
+.NavBar ul li a {
+
+  padding-left: 2rem;
+  padding-right: 2rem;
+  
+  line-height: 4rem;
+
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  font-family: "LilitaOne", sans-serif;
+  background-color: rgb(30, 53, 53);
+}
+
+.NavBar ul li a:hover {
+  color: var(--tea-green);
+  background-color: rgb(44, 78, 78);
+}
 
 .page {
   width: 100%;
   height: 100%;
-  background-color:  var(--dark-slate-gray);
+  background-color:  var(--rose-pompadour);
 }
 .Hero {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
     
     width: min(100% - 0rem, var(--container-max, 100ch));
+    height: fit-content;
     margin: auto;
     
-    background-color: var(--tea-green);
-    height: var(--hero-height);
-    max-height: var(--hero-max-height);
+    background-color: var(--mimi-pink);
 }
 
 .Hero img {
+        margin-top: 1rem;
         object-fit: cover;
-        width: min(60% - 5rem, var(--container-max, 40ch));
+        width: min(60% - 1rem, var(--container-max, 40ch));
         aspect-ratio: 1/1;
         border-radius: 100%;
-        margin-left: 1rem;
+        
 }
 
 .box {
@@ -58,8 +100,12 @@
 
   text-align: left;
   height: 80%;
+  width: min(60% - 0rem, var(--container-max, 40ch));
+  flex-grow: 0.2;
+  
 
   margin: 3rem;
+  margin-bottom: 6rem;
 }
 .box a {
   background-color: white;
