--- a/style.css
+++ b/style.css
@@ -9,24 +9,36 @@
     --mimi-pink: #efcfe3ff;
     --dark-slate-gray: #254441ff;
   }
-
+  
 @font-face {
   font-family: "LilitaOne";
   src: url("./Fonts/LilitaOne-Regular.ttf");
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 .TopBar {
   height: 6rem;
   background-color: var(--mimi-pink);
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.TopBar ul {
+  list-style: none;
+  display: flex;
   
 }
 
 .TopBar img {
   height: 5rem;
-  align-self: center;
+  justify-self: center;
+
 }
 
 .NavBar {
@@ -48,22 +60,23 @@
   align-items: stretch;
 }
 .NavBar ul li a {
-
-  padding-left: 2rem;
-  padding-right: 2rem;
-  
+  padding-left: 1rem;
+  padding-right: 1rem;
   line-height: 4rem;
 
   text-align: center;
   text-decoration: none;
-  color: white;
+  
+  color: var(--mimi-pink);
   font-family: "LilitaOne", sans-serif;
   background-color: rgb(30, 53, 53);
 }
 
 .NavBar ul li a:hover {
-  color: var(--tea-green);
+  color: white;
   background-color: rgb(44, 78, 78);
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .page {
@@ -71,6 +84,7 @@
   height: 100%;
   background-color:  var(--rose-pompadour);
 }
+
 .Hero {
     display: flex;
     justify-content: space-evenly;
@@ -81,43 +95,59 @@
     height: fit-content;
     margin: auto;
     
-    background-color: rgb(253, 229, 244);
+    background-color: white;
 }
 
 .Hero img {
-        margin-top: 1rem;
+        margin: 2rem;
         object-fit: cover;
         width: min(60% - 1rem, var(--container-max, 40ch));
         aspect-ratio: 1/1;
         border-radius: 100%;
+
+        box-shadow: -0.5rem 0.5rem var(--rose-pompadour);
+
         
 }
 
 .box {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  justify-content: space-evenly;
+  align-items: baseline;
 
   text-align: left;
-  height: 80%;
+  
   width: min(60% - 0rem, var(--container-max, 40ch));
+  height: 100%;
   flex-grow: 0.2;
+  margin: 1rem;
   
 
-  margin: 3rem;
-  margin-bottom: 6rem;
+  
 }
 .box a {
-  background-color: white;
-  align-self: flex-end;
+  background-color: var(--tea-green);
+  margin-top: 10%;
+
+  text-decoration: none;
+  font-family: "LilitaOne", sans-serif;
+  color: var(--dark-slate-gray);
+
   padding: 1rem;
   padding-left: 2rem;
   padding-right: 2rem;
+  border-radius: 10rem;
+}
+
+.box a:hover {
+  background-color: rgb(198, 255, 172);
+
 }
 
 .box h1 {
   font-family: "LilitaOne", sans-serif;
-  font-size: 3rem;
+  font-size: clamp(1.5rem,3rem,4rem);
   color: var(--rose-pompadour);
 }
 
