--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
+
+  z-index: 10;
   
   
 }
@@ -44,11 +46,12 @@
 .TopBar ul li a img {
   color: white;
   width: 50%;
+  height: 5rem;
 
 }
 
-.TopBar img {
-  height: 5rem;
+.logo {
+  height: 80%;
   width: 30%;
 }
 
@@ -61,6 +64,7 @@
   background-color: var(--dark-slate-gray);
   position: sticky;
   top: 6rem;
+  z-index: 10;
 }
 
 .NavBar ul {
@@ -109,7 +113,7 @@
     flex-wrap: wrap;
     
     width: min(80% - 0rem, var(--container-max, 100ch));
-    height: fit-content;
+    height: 100%;
     margin: auto;
     
     background-color: white;
@@ -181,11 +185,50 @@
   padding-top: 4rem;
   padding-bottom: 4rem;
   background-color: var(--mimi-pink);
+
+  display: grid;
+  grid-template-rows: 150px 1fr;
+  grid-template-columns: 250px 1fr;
+
 }
 
 .infopage img {
   width: 100%;
+  grid-area: 1 / 1 / 4 / 4;
 }
+
+.infoText {
+  grid-area: 1 / 1 / 4 / 4;
+  display: flex;
+  z-index: 3;
+}
+
+.infopage .empty2 {
+  grid-area: 1 / 1 / 4 / 4;
+  background-color: rgb(94, 38, 83);
+  opacity: 50%;
+  z-index: 2;
+}
+
+.infoText .container {
+  width: min(65% - 0rem, var(--container-max, 100ch));
+  height: 70%;
+  margin: auto;
+}
+
+.infoText p {
+  color: white;
+  margin-top: 3rem;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+}
+.infoText h1 {
+  color: white;
+  font-family: "LilitaOne", sans-serif;
+  font-size: 3rem;
+}
+
+
 
 @media screen and (max-width: 600px) {
   .empty {
@@ -204,6 +247,11 @@
     justify-content: flex-end;
     width: 40%;
     margin-right: 1rem;
+  }
+
+  .infopage {
+
+  
   }
 
   .NavBar {
