--- a/style.css
+++ b/style.css
@@ -183,12 +183,10 @@
   width: min(80% - 0rem, var(--container-max, 100ch));
   margin-inline: auto;
   padding-top: 4rem;
-  padding-bottom: 4rem;
-  background-color: var(--mimi-pink);
+  padding-bottom: 6rem;
+  background-color: white;
 
   display: grid;
-  grid-template-rows: 150px 1fr;
-  grid-template-columns: 250px 1fr;
 
 }
 
@@ -200,32 +198,52 @@
 .infoText {
   grid-area: 1 / 1 / 4 / 4;
   display: flex;
+  width: min(80% - 0rem, var(--container-max, 100ch));
   z-index: 3;
 }
 
 .infopage .empty2 {
   grid-area: 1 / 1 / 4 / 4;
-  background-color: rgb(94, 38, 83);
-  opacity: 50%;
+  background-color: rgb(255, 255, 255);
+  opacity: 75%;
   z-index: 2;
 }
 
 .infoText .container {
-  width: min(65% - 0rem, var(--container-max, 100ch));
+  width: min(80% - 0rem, var(--container-max, 100ch));
   height: 70%;
   margin: auto;
 }
 
 .infoText p {
-  color: white;
+  color: var(--rose-pompadour);
   margin-top: 3rem;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
+
+  
 }
 .infoText h1 {
-  color: white;
+  color: var(--rose-pompadour);
   font-family: "LilitaOne", sans-serif;
-  font-size: 3rem;
+  font-size: 2.5rem;
+}
+
+
+
+.footer {
+  width: 100%;
+  height: 8rem;
+  background-color: var(--dark-slate-gray);
+  display: flex;
+  justify-content: center;
+}
+
+.footer p{
+  width: min(80% - 0rem, var(--container-max, 125ch));
+  color: var(--mimi-pink);
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 2rem;
 }
 
 
@@ -249,12 +267,12 @@
     margin-right: 1rem;
   }
 
-  .infopage {
-
-  
-  }
-
   .NavBar {
     top: 4rem;
+    height: 3rem;
+  }
+
+  .NavBar ul li a {
+    line-height: 3rem;
   }
 }
