--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 
     --tea-green: #cdeac0ff;
     --rose-pompadour: #e27396ff;
+    --dark-rose: rgb(192, 79, 114);
     --amaranth-pink: #ea9ab2ff;
     --mimi-pink: #efcfe3ff;
     --dark-slate-gray: #254441ff;
@@ -144,7 +145,7 @@
   text-align: center;
   text-decoration: none;
   
-  color: var(--rose-pompadour);
+  color: var(--dark-rose);
   font-family: "LilitaOne", sans-serif;
   background-color: var(--mimi-pink);
 }
@@ -170,7 +171,8 @@
 
 .ColorBox {
   aspect-ratio: 1/1;
-  width: min(35% - 0.5rem, var(--container-max, 15ch));
+  width: min(40% - 0.5rem, var(--container-max, 15ch));
+  
   border-style: solid;
   display: flex;
   align-items: center;
@@ -298,17 +300,17 @@ h2 {
 }
 h3 {
   font-size: var(--step-2);
-  color: var(--dark-slate-gray);
+  color: var(--rose-pompadour);
 }
 h4 {
   font-size: var(--step-1);
-  color: var(--dark-slate-gray);
+  color: var(--dark-rose);
 }
 p {
   font-family: Arial, Helvetica, sans-serif;
-  color: var(--dark-slate-gray);
+  color: var(--dark-rose);
   margin-top: 1rem;
-  font-size: var(--step--1);
+  font-size: var(--step-0);
 }
 .text_pink {
   font-family: Arial, Helvetica, sans-serif;
@@ -381,6 +383,20 @@ p {
 }
 
 
+
+
+.pink_box {
+  background-color: var(--dark-rose);
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+
+.white {
+  color: white;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
 .Employees {
   margin-inline: auto;
   display: flex;
@@ -394,12 +410,15 @@ p {
 .Employee_card {
   width: 25%;
   padding: 1rem;
-  background-color: rgb(235, 233, 233);
+  background-color: white;
+  border-radius: 1rem;
 
   width: min(60% - 0rem, var(--container-max, 20ch));
 }
 
 .Employee_card img {
+  aspect-ratio: 1/1;
+  object-fit: cover;
   width: 100%;
   border-radius: 2rem;
 }
